// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<SingleRowPageWrapper>
  <div />
</SingleRowPageWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "mt": 3,
    }
  }
>
  <CenterSpinner />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests redirect to login page 1`] = `
<Navigate
  to="/login"
/>
`;

exports[`Shallow Snapshot Tests redirect to map page when logged out 1`] = `
<Navigate
  to="/"
/>
`;
